# Flask-na22d

./: Formater.py  app.py  datadontopen  datadontopen.txt  main.py  pyproject.toml
Saves/: index.html
static/: javascript.js
static/css/: main.css
template/: base.html  index.html  update.html
